objects/Institution_Roles__c.object
<CustomObject>
    <fields>
        <fullName>ABC_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-4267</description>
        <inlineHelpText>Contact would: pick up phone if ABC Owner called, respond to email in 48hrs. Owner likely influences contact, can deliver good/bad news.</inlineHelpText>
        <label>ABC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Institution_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Comment__c</fullName>
        <inlineHelpText>Essential details about this contact or position.</inlineHelpText>
        <label>Important Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_ABCO_Relationship__c</fullName>
        <formula>TEXT(Contact__r.ABCO_Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Relationship Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Institution Roles</relationshipLabel>
        <relationshipName>Institution_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Segment__c</fullName>
        <formula>Institution__r.Record_Type_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Interaction_Date__c</fullName>
        <description>CR-20140124-4353
Date of the most recent activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization.</description>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interaction_Type__c</fullName>
        <description>CR-20140124-4353
Type of the most recent activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization.</description>
        <label>Last Interaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Interaction__c</fullName>
        <description>CR-20140124-4353
Date + Type of the most recent activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization.</description>
        <formula>TEXT(Last_Interaction_Date__c)
&amp; 
IF(
	AND(
		NOT(ISNULL(Last_Interaction_Date__c)),
		NOT(ISBLANK(Last_Interaction_Date__c)),
		NOT(ISNULL(Last_Interaction_Type__c)),
		NOT(ISBLANK(Last_Interaction_Type__c))
	),
	&quot; - &quot;,
	&quot;&quot;
)
&amp;
Last_Interaction_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date + Type of the most recent activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization.</inlineHelpText>
        <label>Last Interaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Interaction_Date__c</fullName>
        <description>CR-20140124-4353
Date of the next activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization</description>
        <label>Next Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Interaction_Type__c</fullName>
        <description>CR-20140124-4353
Type of the next activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization</description>
        <label>Next Interaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Interaction__c</fullName>
        <description>CR-20140124-4353
Date + Type of the next activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization</description>
        <formula>TEXT(Next_Interaction_Date__c )
&amp;
IF(
	AND(
		NOT(ISNULL(Next_Interaction_Date__c)),
		NOT(ISBLANK(Next_Interaction_Date__c)),
		NOT(ISNULL(Next_Interaction_Type__c)),
		NOT(ISBLANK(Next_Interaction_Type__c))
	),
	&quot; - &quot;,
	&quot;&quot;
)
&amp;
Next_Interaction_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date + Type of the next activity out of the following: Events/Activities, Delivery Member Interaction, Meeting Utilization</inlineHelpText>
        <label>Next Interaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <inlineHelpText>Select the Institution Record Type. This value controls the Roles for the contact being added.</inlineHelpText>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>US Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US HCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International HCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Practice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <controllingField>Record_Type__c</controllingField>
            <picklistValues>
                <fullName>Accts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO - Head of Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO - Head of Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO - Head of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO - Head of Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Gate Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO - Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNO - Head of Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO - Head of Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQO - Head of Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Assoc VP (Provost) of Acad Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Assoc VP of Finance &amp; Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Chief Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Community College President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Dean of Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Dir. of Mkting &amp; Online Ed (COE #2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Director of Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB: Director of Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <description>Created as part of CR-4267</description>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>ABC Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookyloo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naysayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Institution Role</label>
    <nameField>
        <label>Institution Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institution Roles</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>